[tool.poetry]
name = "grimoire-elk"
version = "0.101.0"
description = "GrimoireELK processes and stores software development data to ElasticSearch"
readme = "README.md"
authors = [
   "Bitergia <grimoirelab-discussions@lists.linuxfoundation.org>"
]
repository = "https://github.com/chaoss/grimoirelab-elk"
keywords = ["development repositories analytics"]
license = "GPL-3.0-or-later"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Software Development',
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8'
]

packages = [
   { include = "grimoire_elk"},
   { include = "tests", format = "sdist" },
]

include = [
  "grimoire_elk/enriched/mappings/*.json"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-elk/issues"

[tool.poetry.scripts]
p2o = 'utils.p2o:main'
gelk_mapping = 'utils.gelk_mapping:main'

[tool.poetry.dependencies]
python = "^3.7"
elasticsearch = "6.3.1"
elasticsearch-dsl = "6.3.1"
requests = "2.26.0"
urllib3 = "1.26.5"
geopy = "^2.0.0"
PyMySQL = "0.9.3"
pandas = ">=0.22.0,<=0.25.3"
statsmodels = ">=0.9.0"
sortinghat = "^0.7.20"
grimoirelab-toolkit = "^0.3.0"
cereslib = "^0.3.0"
graal = "^0.3.0"
perceval = "^0.18.0"
perceval-mozilla = "^0.3.0"
perceval-opnfv = "^0.2.0"
perceval-puppet = "^0.2.0"
perceval-weblate = "^0.2.0"

[tool.poetry.dev-dependencies]
httpretty = "^0.9.6"
flake8 = "^3.9.2"
coverage = "^5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
